Crash in COLRv1 variable code
I'm observing a crash in COLRv1 variations code. If there's no variations set on the font, then the code tries to apply variations and the respective noormalizedcoords in the face is NULL but is tried to be accessed:
0x00007ffff7df3d66 in tt_var_get_item_delta (face=0x421a70, itemStore=0x4231e8, outerIndex=<optimized out>, innerIndex=<optimized out>) at /home/behdad/freetype/src/truetype/ttgxvar.c:1060
1060 else if ( face->blend->normalizedcoords[j] == axis->peakCoord )
The backtrace is:
#0 0x00007ffff7df3d66 in tt_var_get_item_delta (face=0x421a70, itemStore=0x4231e8, outerIndex=<optimized out>, innerIndex=<optimized out>)
at /home/behdad/freetype/src/truetype/ttgxvar.c:1060
#1 0x00007ffff7e2ef4f in get_deltas_for_var_index_base (deltas=0x7fffffff9d10, num_deltas=4, var_index_base=<optimized out>, colr=0x4231a0, face=0x421a70)
at /home/behdad/freetype/src/sfnt/ttcolr.c:613
This was working with earlier freetype.