[ttgxvar] Fix crash in COLRv1

This is a stopgap until the following is properly fixed:
https://gitlab.freedesktop.org/freetype/freetype/-/issues/1202